      "get slice select index" "slice child index" [James]
    * "create scroll" "slice is scroll" "set scroll bar style"
      "get scroll bar style" "set scroll check depth"
      "get scroll check depth" "scroll to child" [James]
    * "next npc reference" [Ralph]
    * "input string with virtual keyboard",
      "input string with mouse keyboard" [James]

  * Performance Fixes
    * Fixed delay when opening a menu that happened when a large number
      of menus were defined [Ralph]
    * HSpeak was extremely slow (potentially hours) at reading files
      with DOS/Windows line-endings on Linux/Mac [Ralph]
    * The script intrepeter was running tight loops much (eg 2x) slower
      than it used to before Beelzebufo [Ralph]
    * Creating or reparenting thousands of slices was slow [Ralph]

  * Stuff Only Developers Will Notice
    * Experimental support for Android phones and tablets
    * Experimental support for the OUYA Console, Gamestick Console,
      Fire TV Console
    * Experimental support for the Raspberry Pi

April 9 2013 [Beelzebufo]

  * New Features
    * General preference bitset "Don't reset max stats after OOB attack"
      to prevent stat maximum values from being altered by attacks and
      items outside of battle [Ralph]
    * Max tag is now 15999 instead of 999 [James]
    * Max NPC onetime tag is now 15999 instead of 1000 [James]
    * A bunch of attack bitsets have moved into the Attack Damage
      Settings Menu, which now dynamically hides settings and bitsets
      that have no effect, and shows in detail how the attack damage
      will actually be calculated. [Ralph]
    * When adding a new hero, attack, enemy or shop, added the option
      to copy an existing one [Ralph]
    * Attack can optionally override the hero's weapon sprite [James]
    * Enemies can do an On-Death Bequest attack when killed [James]
    * Textbox backdrops can optionally allow color 0 to be transparent
      [Ralph, James]