@@ -3053,12 +3053,21 @@ end
 		<command id="initmouse">
 			<canon>init mouse</canon>
 			<shortname>init mouse</shortname>
-			<description>Informs the engine that you intend to use the mouse. This command should be run before any mouse functions are be used. It causes the normal mouse cursor to be hidden when over the game's window, and causes mouse buttons to trigger on-keypress scripts. Therefore, it is a good idea to place this command in the newgame and loadgame scripts if you are going to use the mouse.<lb/><note>Running this command does not draw a cursor onscreen - your script must do this itself by placing a slice or npc at the appropriate location.</note> Here is an example:</description>
-			<example>#Mouse cursor example
+			<description>Informs the engine that you intend to use the mouse. This command should be run before any mouse functions are be used. It causes the normal mouse cursor to be hidden when over the game's window, and causes mouse buttons to trigger on-keypress scripts. Therefore, it is a good idea to place this command in the newgame and loadgame scripts if you are going to use the mouse.<lb/><note>Running this command does not draw a cursor onscreen. Either you can enable the default mouse cursor with <ref>unhidemousecursor</ref>, or your script may display the cursor itself by placing a slice or npc at the appropriate location.</note> Here is an example:</description>
+			<example>#Simple Mouse cursor example
 
 plotscript, display mouse, begin
 
   # Hide the normal mouse cursor
+  init mouse
+  # Re-enables the normal mouse cursor
+  unhide mouse cursor
+
+end</example><example>#Custom Mouse cursor example
+
+plotscript, display mouse, begin
+
+  # Hides the normal mouse cursor
   init mouse
 
   # Use a small enemy sprite (ID 1) slice as a mouse cursor
@@ -3111,6 +3120,16 @@ end</example>
 				<ref>inputstring</ref>
 				<ref>inputstringwithvirtualkeyboard</ref>
 			</seealso>
+		</command>
+		<command id="unhidemousecursor">
+			<canon>unhide mouse cursor</canon>
+			<shortname>unhidemousecursor</shortname>
+			<description>Causes the normal OS mouse cursor to be displayed. You may want to run this command right after <ref>initmouse</ref> unless you plan to use a customized mouse cursor. Note that this command has no effect if the game is running on Android, because a mouse cursor is usually inappropriate on a touch screen.</description>
+		</command>
+		<command id="hidemousecursor">
+			<canon>hide mouse cursor</canon>
+			<shortname>hidemousecursor</shortname>
+			<description>Causes the normal OS mouse cursor to be hidden. This command is seldom needed, because the cursor is hidden by default when you run <ref>initmouse</ref>.</description>
 		</command>
 		</section>		<!-- Mouse Input-->
 	</section>		<!-- Getting Player Input-->
