@@ -620,6 +620,8 @@ define function, begin
 598,nextnpcreference,1,0      # Iterating over NPCs: reference to next NPC
 599,input string with mouse keyboard,2,0,-1 # pop up a virtual keyboard that responds to mouse clicks
 600,runningonouya,0           #returns true if the device is OUYA (see also "running on console")
+601,unhidemousecursor,0       #unhides the OS mouse cursor
+602,hidemousecursor,0         #hides the OS mouse cursor
 # Don't forget to update maxScriptCmdID in const.bi when adding new commands
 end
 
